despatma-dependency-container/tests/fail/impl_trait_but_requesting_concrete.stderr
error: Requested type is a concrete type, but the registered type is: `impl DAL`

         = help: change this to `dal: impl DAL`

  --> tests/fail/impl_trait_but_requesting_concrete.rs:33:39
   |
33 |     fn service(&self, config: Config, dal: PostgresDAL) -> Service<PostgresDAL> {
   |                                       ^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `DependencyContainer`
  --> tests/fail/impl_trait_but_requesting_concrete.rs:39:21
   |
39 |     let container = DependencyContainer::new();
   |                     ^^^^^^^^^^^^^^^^^^^ use of undeclared type `DependencyContainer`
